# Sloth

./: .dockerignore  .eslintrc  .gitattributes  .gitignore  .pylintrc  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.tests  LICENSE  Pipfile  README.md  Rolling Todo.md  build.sbt  composer.json  cypress.json  docker-compose.tests.yml  docker-compose.yml  env.test.list  gulpfile.js  gunicorn_config.py  index.md  job_runner.py  migration.example.json  migration.json  migration_script.py  package-lock.json  package.json  readme.md  run-tests.sh  run.py  sast-scan  setup.py  sloth.toml  start_server.bat  tests.sh  update.sh  vue.config.js
.bsp/: sbt.json
.github/: scalastyle-validate.yml
.github/workflows/: codeql-analysis.yml  cypress.yml  rust-lint.yml  security-audit.yaml
CMSService/: .gitignore  Pipfile  README.md  bundle.sh  migration_script.py  package-lock.json  package.json  run-tests.sh  theme.config.json  update.sh
CMSService/app/: __init__.py
CMSService/generators/: Pipfile  __init__.py  note.md
CMSService/generators/rust_generators/: Cargo.toml  pyproject.toml
CMSService/generators/rust_generators/interpreters/: Cargo.toml
CMSService/generators/rust_generators/interpreters/src/: data_type.rs
CMSService/generators/rust_generators/src/: data_type.rs  lib.rs  node.rs  patterns.rs  runners.rs  slothmark.rs
admin_service/: Cargo.toml  build.rs
admin_service/proto/: auth_service.proto  page_generation.proto
admin_service/src/: guards.rs  main.rs
admin_service/src/authentication/: authentication.rs  mod.rs
admin_service/src/dashboard/: dashboard.rs  mod.rs
admin_service/src/media/: mod.rs
admin_service/src/post/: mod.rs
admin_service/src/post_type/: mod.rs
admin_service/src/settings/: mod.rs
admin_service/src/themes/: mod.rs
admin_service/src/user/: login_details.rs  mod.rs  user_token.rs
adr/: 202505220900_api_v2.md  202505220930_cypress_testing.md  202505281111_pyo3.md
app/: __init__.py
app/authorization/: authorize.py  user.py
app/dashboard/: __init__.py  routes.py
app/errors/: routes.py
app/forms/: routes.py
app/post/: routes.py  (+9 more)
auth_service/: Cargo.toml
auth_service/proto/: auth.proto
auth_service/src/: authorization.rs  database.rs  main.rs
auth_service/src/authentication/: argon.rs  bcrypt.rs  mod.rs
auth_service/src/greeters/: auth_service_greeter.rs  mod.rs
auth_service/src/queries/: check_token.sql  create_password.sql  create_token.sql  get_password.sql  refresh_token.sql  remove_token.sql  update_password.sql
common_db_lib/: Cargo.toml
common_db_lib/src/: database.rs  lib.rs
common_db_lib/src/models/: single_post.rs
common_db_lib/src/queries/post/: post_type_archive.sql  sections.sql  single_post.sql  taxonomy_archive.sql
common_db_lib/src/query_builders/: mod.rs
config/: dev.py  development.py  tests.py
post_generation_service/: Cargo.toml  build.rs
post_generation_service-kept-for-learning-purposes/: build.rs
post_generation_service/pgs-renderer/: Cargo.toml
post_generation_service/pgs_common/: Cargo.toml
post_generation_service/pgs_common/src/: database.rs  lib.rs  node.rs  patterns.rs  value.rs
post_generation_service/pgs_common/src/models/: mod.rs  post_status.rs  single_post.rs
post_generation_service/pgs_common/src/query_builders/queries/: single_post.sql
post_generation_service/pgs_nodes/: Cargo.toml
post_generation_service/pgs_nodes/src/: node.rs
post_generation_service/pgs_renderer/: Cargo.toml
post_generation_service/pgs_renderer/src/: lib.rs
post_generation_service/pgs_slothmark/: Cargo.toml
post_generation_service/pgs_slothmark/src/: lib.rs
post_generation_service/pgs_toes/: Cargo.toml
post_generation_service/pgs_toes/src/: compiler.rs  conditions.rs  for_iterator_wrapper.rs  for_struct.rs  lib.rs  parser.rs  string_helpers.rs  template.rs  variable_scope.rs
post_generation_service/pgs_toes/test_data/: fragment_with_div.toe.html  single_template.toe.html
post_generation_service/proto/: page_generation.proto  post_generation.proto
post_generation_service/src/: generator.rs  main.rs  post_generator.rs
post_generation_service/src/greeters/: mod.rs  post_service_greeter.rs
post_generation_service/src/post/: files.rs  mod.rs
post_generator/: go.mod  main.go  post_generator.go  settings.go
post_lib/: Cargo.toml
public/: index.html
rust/toes/: Cargo.toml
rust/toes/old/: compiler.rs  condition_processing.rs  generator.rs  lib.rs  node.rs  simple_condition.rs  toe_parser.rs  variable_scope.rs
rust/toes/src/: alt_variable_scope.rs  compiler.rs  condition_processing.rs  generator.rs  lib.rs  node.rs  parser.rs  shared.rs  simple_condition.rs  toe_parser.rs  variable_scope.rs
rust/toes/src/common/: mod.rs  toe_node.rs
rust/toes/src/markdown/: mdparser.rs  mod.rs
rust/toes/src/post/: mod.rs  post.rs  post_struct.rs  settings_structs.rs
rust/toes/src/repositories/: mod.rs
rust/toes/src/toes/: parser.rs
scheduled_job/: Cargo.toml  README.md
scheduled_job/src/: main.rs
scheduling_daemon/: Cargo.toml
scheduling_daemon/proto/: post_generation.proto
scheduling_daemon/src/: main.rs
service/: Cargo.toml
service/interpreters/: Cargo.toml
service/interpreters/src/: conditions.rs  data_type.rs  lib.rs  node.rs  patterns.rs  slothmark.rs  toe_commands.rs  variable_scope.rs
service/interpreters/src/pgs_common_TO_EXPLORE/: Cargo.toml
service/interpreters/src/pgs_common_TO_EXPLORE/src/: lib.rs
service/interpreters/src/pgs_slothmark_TO_EXPLORE/: Cargo.toml
service/src/: config_app.rs  main.rs  render.rs
sloth-components/: .gitignore  package-lock.json  package.json  stencil.config.ts
sloth_config_lib/: Cargo.toml
slow_docs/: 0000 current status.md  0001 organization.md  0002 admin service analysis and todos.md  0003 post generation service analysis and todos.md  general notes.md
toes/: go.mod  main.go  node.go  settings.go  xml_parser.go  xml_parsing_info.go
webapp/: README.md  constants.ts  cypress.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json
webappMockBackend/: Pipfile  server.py
(+903 files in other folders)
