[package]
name = "sloth"
version = "0.1.0"
authors = ["Sarah Gebauer <xgebi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
postgres = "0.17.2"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "serve", "uuid", "helmet"]