[package]
name = "admin_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6.1"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
config = "0.14.0"
deadpool-postgres = { version = "0.12.1", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.10"
tonic = "0.11.0"
prost = "0.12"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sloth_config_lib = { path = "../sloth_config_lib" }

# Help you use gRPC protobuf files in Rust.
[build-dependencies]
tonic-build = "0.11.0"
