[package]
name = "admin_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6.1"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
config = "0.15.6"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
derive_more = "1.0.0"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.12"
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
sloth_config_lib = { path = "../sloth_config_lib" }

# Help you use gRPC protobuf files in Rust.
[build-dependencies]
tonic-build = "0.12.3"
