[package]
name = "post_generation_service"
version = "0.1.1-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "pgs-toes",
    "pgs-slothmark",
    "pgs-renderer",
]

[dependencies]
tonic = "0.8.3"
bytes = "1.3.0"
prost = "0.11.5"
prost-derive = "0.11.5"
prost-types = "0.11.5"
futures-core = "0.3.25"
futures-util = "0.3.25"
futures-preview = { version = "0.3.0-alpha.19", default-features = false, features = ["alloc"]}
tokio = { version = "1.23.1", features = ["full"] }
tokio-stream = "0.1.11"
async-stream = "0.3.3"
http = "0.2.8"
tower = "0.4.13"
rand = "0.8.5"
config = "0.13.3"
deadpool-postgres = "0.10.3"
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
console = "0.15.3"
#tokio-pg-mapper = "0.2.0"
#tokio-pg-mapper-derive = "0.2.0"
#tokio-postgres = "0.7.7"
postgres = { version = "0.19.4" }
chrono = "0.4.9"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

# Help you use gRPC protobuf files in Rust.
[build-dependencies]
tonic-build = "0.8.4"

