[package]
name = "post_generation_service"
version = "0.1.1-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "pgs_common",
    "pgs_toes",
    "pgs_slothmark",
]

[dependencies]
confy = "0.6.1"
sloth_config_lib = { path = "../sloth_config_lib" }
common_db_lib = { path = "../common_db_lib" }
pgs_common = { path = "pgs_common" }
pgs_toes = { path = "pgs_toes" }
pgs_slothmark = { path = "pgs_slothmark" }
tonic = "0.11.0"
bytes = "1.6.0"
prost = "0.12.3"
prost-derive = "0.12.3"
prost-types = "0.12.3"
futures-core = "0.3.30"
futures-util = "0.3.30"
futures-preview = { version = "0.3.0-alpha.19", default-features = false, features = ["alloc"]}
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
http = "1.1.0"
tower = "0.4.13"
rand = "0.8.5"
config = "0.14.0"
deadpool-postgres = "0.12.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_derive = "1.0.197"
console = "0.15.8"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.10"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
fs_extra = "1.3.0"

# Help you use gRPC protobuf files in Rust.
[build-dependencies]
tonic-build = "0.11.0"

