[package]
name = "post_generation_service"
version = "0.1.1-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "pgs_common_TO_EXPLORE",
    "pgs_toes",
    "pgs_slothmark_TO_EXPLORE",
]

[dependencies]
confy = "0.6.1"
sloth_config_lib = { path = "../sloth_config_lib" }
common_db_lib = { path = "../common_db_lib" }
pgs_common = { path = "pgs_common_TO_EXPLORE" }
pgs_toes = { path = "pgs_toes" }
pgs_slothmark = { path = "pgs_slothmark_TO_EXPLORE" }
tonic = "0.12.3"
bytes = "1.9.0"
prost = "0.13.4"
prost-derive = "0.13.4"
prost-types = "0.13.4"
futures-core = "0.3.31"
futures-util = "0.3.31"
futures-preview = { version = "0.3.0-alpha.19", default-features = false, features = ["alloc"]}
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
http = "1.2.0"
tower = "0.5.2"
rand = "0.9.0"
config = "0.15.6"
deadpool-postgres = "0.14.1"
derive_more = "1.0.0"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_derive = "1.0.217"
console = "0.15.10"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.12"
chrono = "0.4.39"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
fs_extra = "1.3.0"

# Help you use gRPC protobuf files in Rust.
[build-dependencies]
tonic-build = "0.12.3"

