[workspace]
resolver = "3"
members = ["interpreters"]

[workspace.package]
name = "service"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[package]
name = "service"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
actix-web = "4.10.2"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"

[dependencies]
actix-web.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
interpreters = { version = "0.1.0", path = "interpreters" }

[[bin]]
name = "service"
test = true
doc = false