[package]
name = "toes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toes"
crate-type = ["cdylib"]
bench = false

[dependencies]
atree = "0.5.2"
postgres = "0.19.1"
postgres-types = { version = "0.2.1", features = ["derive"] }

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]