[package]
name = "toes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toes"
crate-type = ["cdylib"]
bench = false

[dependencies]
unicode-segmentation = "1.8.0"
postgres = "0.19.2"
postgres-types = { version = "0.2.2", features = ["derive"] }
regex = "1.5.4"
pyo3-asyncio = { version = "0.15", features = ["tokio-runtime"] }
tokio = "1.9"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]