[package]
name = "toes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toes"
crate-type = ["cdylib"]
bench = false

[dependencies]
unicode-segmentation = "1.8.0"
regex = "1.5.4"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]