[workspace]
resolver = "3"
members = ["interpreters"]

[workspace.package]
name = "service"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"

[package]
name = "rust_generators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_generators"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
interpreters = { version = "0.1.0", path = "interpreters" }
