[package]
name = "rust_generators"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_generators"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
unicode-segmentation = "1.12.0"
regex = "1.11.1"
html_escape = "*"
